# track

./: .gitignore  README.md  Track.sln
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: alerts.rs  commands.rs  lib.rs  main.rs  models.rs  pace.rs  store.rs  usage.rs
apps/desktop/src-tauri/src/adapters/: anthropic.rs  mod.rs  openai.rs  secret.rs
apps/desktop/src-tauri/src/cursor/: adapter.rs  api.rs  auth.rs  mod.rs
apps/desktop/src/components/: PaceChart.tsx  ProviderGlyph.tsx
apps/desktop/src/pages/: Flyout.tsx  Settings.tsx
docs/: DESIGN_AUDIT.md  PLAN.md
docs/audit/: render_mocks.py  report_args.json  settings.b64.txt
src/Track/: App.xaml  App.xaml.cs  FlyoutView.xaml  FlyoutView.xaml.cs  FlyoutWindow.xaml  FlyoutWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  Track.csproj  TrayController.cs
src/Track.Core/Adapters/: AnthropicAdminAdapter.cs  CursorSessionAdapter.cs  IProviderAdapter.cs  ManualAdapter.cs  OpenAIAdminAdapter.cs
src/Track.Core/Cursor/: CursorApiClient.cs  CursorAuthStore.cs
src/Track.Core/Models/: UsageModels.cs
src/Track.Core/Pace/: PaceCalculator.cs
src/Track.Core/Services/: UsageService.cs
src/Track.Core/Storage/: ICredentialStore.cs  SnapshotStore.cs
src/Track/Controls/: PaceChartControl.cs
